# cppcli

./: .gitignore  CMakeLists.txt  README.md  build.sh
contents/: build.txt  cmake.txt  main.txt
files/: CMakelistsT.txt  README.txt  gitignore.txt  main.txt
include/: Contents.hpp
src/: main.cpp
